force-app/main/default/Objects/SkillQuestion__c/SkillQuestion__c.object-meta.xml
<CustomObject>
    <description>Question to help determine user&apos;s understanding of the skill</description>
    <label>Skill Question</label>
    <nameField>
        <displayFormat>SQ{000}</displayFormat>
        <label>Skill Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>