force-app/main/default/objects/SkillQuestion__c/fields/Answer_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Answer_Explanation__c</fullName>
    <description>Drives delivery flow branching: Multiple-Choice routes to answer selection; Open-Ended routes to Penny-Coached Review; Scenario-Based routes to Trail Quest pattern. Information as to why answer is or is not correct.</description>
    <inlineHelpText>Drives delivery flow branching: Multiple-Choice routes to answer selection; Open-Ended routes to Penny-Coached Review; Scenario-Based routes to Trail Quest pattern. Information as to why answer is or is not correct.</inlineHelpText>
    <label>Answer Explanation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>