force-app/main/default/objects/SkillQuestion__c/fields/Correct_Answer_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Explanation__c</fullName>
    <description>Drives delivery flow branching: Multiple-Choice routes to answer selection; Open-Ended routes to Penny-Coached Review; Scenario-Based routes to Trail Quest pattern. Information about the correct answer</description>
    <inlineHelpText>Drives delivery flow branching: Multiple-Choice routes to answer selection; Open-Ended routes to Penny-Coached Review; Scenario-Based routes to Trail Quest pattern. Information about the correct answer</inlineHelpText>
    <label>Correct Answer Explanation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>