force-app/main/default/Objects/SkillQuestion__c/fields/MaxMinutes__c.field-meta.xml
<CustomField>
    <fullName>MaxMinutes__c</fullName>
    <description>The max number of minutes user has to answer the question</description>
    <inlineHelpText>The max number of minutes user has to answer the question</inlineHelpText>
    <label>Max Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>