force-app/main/default/Objects/SkillQuestion__c/fields/SkillLookup__c.field-meta.xml
<CustomField>
    <fullName>SkillLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Skill Questions (Skill)</relationshipLabel>
    <relationshipName>Skill_Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>