force-app/main/default/Objects/SkillQuestion__c/fields/SkillLookupold__c.field-meta.xml
<CustomField>
    <fullName>SkillLookupold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Skill Questions</relationshipLabel>
    <relationshipName>Skill_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>