force-app/main/default/Objects/SkillQuestion__c/fields/SkillQuestion__c.field-meta.xml
<CustomField>
    <fullName>SkillQuestion__c</fullName>
    <description>Question text</description>
    <inlineHelpText>Question text</inlineHelpText>
    <label>Skill Question</label>
    <length>13000</length>
    <type>Html</type>
</CustomField>