force-app/main/default/Objects/SkillQuestion__c/fields/TotalAnswers__c.field-meta.xml
<CustomField>
    <fullName>TotalAnswers__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Total related answers</description>
    <inlineHelpText>Total related answers</inlineHelpText>
    <label>Total Answers</label>
    <summaryForeignKey>SkillQuestionAnswer__c.SkillQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>