force-app/main/default/Objects/SkillQuestion__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Used to calculate score; we can indicate which question is most important by increasing the weight</description>
    <inlineHelpText>Used to calculate score; we can indicate which question is most important by increasing the weight</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>