force-app/main/default/Objects/SkillQuestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>SkillQuestion__c</columns>
    <columns>TotalAnswers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>